# arcana-ai

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  docker-compose.prod.yaml  docker-compose.staging.yaml  docker-compose.yaml  monitoring-docker-compose.yaml  redis-docker-compose.yaml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  __init__.py  alembic.ini  app.py  celery_app.py  celery_worker.py  config.py  constants.py  create_checkout_sessions_table.py  database.py  migrate.py  models.py  pyproject.toml  schemas.py  schemas_errors.py  seed_cards.py  seed_spreads.py  system_prompt.txt  tarot.db  tarot_cards.json  tarot_reader.py  upload_results.json
backend/app/api/: api.py
backend/docs/: CHANGELOG.md
backend/migrations/: env.py
backend/migrations/versions/: 20250425_080120_bf43f0cb2132_initial_migration.py  20250530_051643_ec3f7fdaef13_add_message_card_association_nullable_.py  20250530_065502_1506a96ef8b8_generate_migration_for_current_models.py  20250530_090156_62d8afeb7b5a_add_description_short_to_cards_table.py  20250603_102920_f311fba5275a_add_database_indexing.py  20250603_155031_6a67726cf266_enable_rls.py  20250608_044040_a9ef7e64ef7f_add_deck_to_card.py  20250608_044702_cc2dc4063546_add_deck_foreign_key_to_card.py  20250608_045121_2d033e0e569b_populate_data_for_card.py  20250608_045852_57d151e5e294_add_favorite_deck_to_user_model.py  20250610_110007_efa035b1f5e8_add_is_premium_field_to_user_model.py  20250616_085928_a1726ed21cef_remove_freemium_features.py  20250619_043353_ebbff625bede_add_spreads_table.py  20260423_000000_add_ad_views_table.py  (+33 more)
backend/routers/: admin.py  ads.py  auth.py  changelog.py  chat.py  health.py  journal.py  sharing.py  stats.py  streaks.py  subscription.py  support.py  tarot.py  tasks.py  utilities.py  web_push.py
backend/scripts/: check_openapi_coverage.py  cleanup_avatars.py  cloudflare_setup_test.py  create_admin_user.py  drop_all_tables.py  make_admin.py  manage_specialized_premium.py  migrate_avatars_to_new_format.py  migrate_to_cloudflare.py  reset_database.py  set_last_free_turns_reset_to_null.py  update_admin_user.py  upload_to_cloudflare_r2.py  verify_admin.py
backend/services/: achievements.py  ethereum_service.py  streak_service.py  subscription_service.py  web_push_service.py
backend/tarot_image_utils/: collect_decks.py  convert_and_upload_marseille.py  convert_and_upload_thoth.py  deck_collection_results.json  download_tarot_images.py  generate_placeholders.py  github_uploader.py  marseille_upload_results.json  organize_tarot_images.py  thoth_upload_results.json
backend/tasks/: __init__.py  dead_letter.py  email_tasks.py  journal_tasks.py  notification_tasks.py  web_push_tasks.py
backend/tests/: conftest.py  factories.py  test_admin.py  test_admin_specialized_premium.py  test_app.py  test_auth.py  test_avatar_utils.py  test_chat_logging.py  test_compatibility.py  test_email_tasks.py  test_error_handlers.py  test_ethereum_service.py  test_health.py  test_journal.py  test_journal_runner.py  test_journal_search.py  test_journal_tasks.py  test_metrics.py  test_models.py  test_notification_tasks.py  test_openapi_docs.py  test_rate_limiter.py  test_streaks.py  test_subscription.py  test_subscription_service.py  test_tarot.py  test_web_push.py
backend/utils/: __init__.py  avatar_utils.py  celery_utils.py  content_safety.py  correlation.py  error_handlers.py  idempotency.py  logging.py  metrics.py  middleware.py  openapi_responses.py  rate_limiter.py  retry.py  telegram_alerts.py  timezones.py
(+191 files in other folders)
